@@ -5,7 +5,8 @@
 	(PARIINFO): define
 	(pari-version): also return PARIINFO
 	(legendre-polynomial, tchebychev-polynomial, hilbert-matrix)
-	(pascal-triangle, binomial-coefficient): fix definitions
+	(pascal-triangle, binomial-coefficient, set-random-seed)
+	(get-random-seed, pari-random): fix definitions
 
 2010-05-26  Sam Steingold  <sds@gnu.org>
 
